# bevy_practice

./: .gitignore  Cargo.toml  README.md
.run/: Run.run.xml
assets/: rocket_launch_1.gltf
src/: animation_transform.rs  area_light.rs  button.rs  cubes.rs  cursor.rs  gltf.rs  main.rs  mesh.rs  pbr.rs  practice.rs  shadow.rs  wire.rs
webapp/src/: App.tsx
