[package]
name = "bevy_practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0" }
rand = "0.8.4"
wasm-server-runner = "0.2.2"

[target.wasm32-unknown-unknown]
runner="wasm-server-runner"